--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="5dp">
 
-    <com.example.xhh.ui.dashboard.CardButton
+    <com.example.xhh.ui.game.CardButton
         android:id="@+id/cardButton"
         android:layout_width="90dp"
         android:layout_height="110dp"
