--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#CFC0ED"
-    tools:context=".ui.notifications.NotificationsFragment">
+    tools:context=".ui.weather.WeatherFragment">
 
     <ListView
         android:id="@+id/listView"
