--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,21 +7,21 @@
 
     <fragment
         android:id="@+id/navigation_chat"
-        android:name="com.example.xhh.ui.home.HomeFragment"
+        android:name="com.example.xhh.ui.chat.ChatFragment"
         android:label="@string/title_chat"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_chat" />
 
     <fragment
         android:id="@+id/navigation_game"
-        android:name="com.example.xhh.ui.dashboard.DashboardFragment"
+        android:name="com.example.xhh.ui.game.GameFragment"
         android:label="@string/title_game"
-        tools:layout="@layout/fragment_dashboard" />
+        tools:layout="@layout/fragment_game" />
 
     <fragment
         android:id="@+id/navigation_weather"
-        android:name="com.example.xhh.ui.notifications.NotificationsFragment"
+        android:name="com.example.xhh.ui.weather.WeatherFragment"
         android:label="@string/title_weather"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_weather" />
     <fragment
         android:id="@+id/navigation_watch"
         android:name="com.example.xhh.ui.watch.WatchFragment"
